plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {

    implementation 'ch.qos.logback:logback-classic'
    implementation("org.hibernate:hibernate-core")
    implementation('org.flywaydb:flyway-core')
    implementation("org.postgresql:postgresql")
    implementation 'com.zaxxer:HikariCP'
    implementation 'javax.json:javax.json-api'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation("org.eclipse.jetty:jetty-servlet:${Versions.jetty}")
    implementation("org.eclipse.jetty:jetty-server:${Versions.jetty}")
    implementation("org.eclipse.jetty:jetty-webapp:${Versions.jetty}")
    implementation("org.eclipse.jetty:jetty-security:${Versions.jetty}")
    implementation("org.eclipse.jetty:jetty-http:${Versions.jetty}")
    implementation("org.eclipse.jetty:jetty-io:${Versions.jetty}")
    implementation("org.eclipse.jetty:jetty-util:${Versions.jetty}")
    implementation("org.freemarker:freemarker:${Versions.freemarker}")
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}


compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.with {
        encoding = 'UTF-8'
    }
}
